Fix dataview tables having extra spacing
The selector looked for divs without classes to signify reading mode.
This caused issues with dataview tables which have their tables within
a div even in live preview.

To fix this, an extra class check has been added to make sure that the
margin only appears when the page itself is already in reading mode.

--- a/theme.css
+++ b/theme.css
@@ -740,7 +740,7 @@ input.task-list-item-checkbox:checked::after {
 }
 
 /* Fix table margin collapse bug and add table margins */
-div:not([class]):has(> table) {
+.markdown-preview-view div:not([class]):has(> table) {
     overflow: unset !important;
 
     > table {
